--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+target/
+.DS_Store
+.project
+org.eclipse.core.resources.prefs
+org.eclipse.m2e.core.prefs
