--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -98,6 +98,12 @@
         <version>2.5</version>
         <scope>provided</scope>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+      <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>42.2.8</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 </project>
