--- a/karaf-system/system.core/src/main/resources/dev/features/org.ops4j.datasource-karafdb.cfg
+++ b/karaf-system/system.core/src/main/resources/dev/features/org.ops4j.datasource-karafdb.cfg
@@ -1,4 +1,4 @@
-osgi.jdbc.driver.name=org.postgresql.Driver
+osgi.jdbc.driver.class=org.postgresql.Driver
 password=karaf_pwd
 user=karaf
 url=jdbc:postgresql://postgres-db:5432/karaf_db
