Adding more support for JDBC

--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -131,6 +131,12 @@
         <version>1.7.30</version>
         <scope>test</scope>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/commons-dbutils/commons-dbutils -->
+      <dependency>
+        <groupId>commons-dbutils</groupId>
+        <artifactId>commons-dbutils</artifactId>
+        <version>1.7</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 </project> 
