--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -7,6 +7,7 @@
   <version>1.0-SNAPSHOT</version>
   <name>KarafSystem</name>
   <modules>
+    <module>system.mocks</module>
     <module>system.dao</module>
     <module>system.workflow</module>
     <module>system.features</module>
@@ -25,7 +26,7 @@
           <groupId>org.apache.felix</groupId>
           <artifactId>maven-bundle-plugin</artifactId>
           <version>4.2.1</version>
-          <extensions>true</extensions>
+          <inherited>true</inherited>
         </plugin>
         <plugin>
           <groupId>org.apache.karaf.tooling</groupId>
@@ -113,18 +114,18 @@
         <artifactId>cxf-rt-frontend-jaxrs</artifactId>
         <version>3.3.2</version>
         <scope>provided</scope>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
+      </dependency> <!--https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine-->
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-engine</artifactId>
         <version>5.6.2</version>
         <scope>test</scope>
-      </dependency>
+      </dependency> <!--https://mvnrepository.com/artifact/org.apache.sling/org.apache.sling.testing.osgi-mock.junit5-->
       <dependency>
         <groupId>org.apache.sling</groupId>
-        <artifactId>org.apache.sling.testing.sling-mock.junit5</artifactId>
+        <artifactId>org.apache.sling.testing.osgi-mock.junit5</artifactId>
         <version>2.4.16</version>
+        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
