--- a/karaf-system/system.mocks/pom.xml
+++ b/karaf-system/system.mocks/pom.xml
@@ -6,11 +6,10 @@
     <artifactId>karaf-system</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-
   <groupId>patlego.vm.github.io</groupId>
-  <artifactId>system.dao</artifactId>
-  <name>System Data Access Objects</name>
+  <artifactId>system.mocks</artifactId>
   <packaging>bundle</packaging>
+  <name>System Mocks</name>
 
   <build>
     <plugins>
@@ -65,10 +64,10 @@
       <artifactId>osgi.annotation</artifactId>
     </dependency>
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
+      <groupId>patlego.vm.github.io</groupId>
+      <artifactId>system.workflow</artifactId>
+      <version>${project.version}</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
@@ -78,9 +77,19 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
     <dependency>
-      <groupId>commons-dbutils</groupId>
-      <artifactId>commons-dbutils</artifactId>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.sling/org.apache.sling.testing.osgi-mock.junit5 -->
+    <dependency>
+      <groupId>org.apache.sling</groupId>
+      <artifactId>org.apache.sling.testing.osgi-mock.junit5</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
     </dependency>
   </dependencies>
 </project>
