--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -160,6 +160,12 @@
         <artifactId>commons-dbutils</artifactId>
         <version>1.7</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/com.google.code.findbugs/jsr305 -->
+      <dependency>
+        <groupId>com.google.code.findbugs</groupId>
+        <artifactId>jsr305</artifactId>
+        <version>3.0.2</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 </project>
