--- a/karaf-system/system.workflow/pom.xml
+++ b/karaf-system/system.workflow/pom.xml
@@ -86,5 +86,9 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>jsr305</artifactId>
+    </dependency>
   </dependencies>
 </project>
