--- a/karaf-system/system.core/src/main/resources/dev/features/org.ops4j.datasource-karafdb.cfg
+++ b/karaf-system/system.core/src/main/resources/dev/features/org.ops4j.datasource-karafdb.cfg
@@ -3,4 +3,4 @@ password=karaf_pwd
 user=karaf
 url=jdbc:postgresql://postgres-db:5432/karaf_db
 dataSourceName=karafdb
-databaseName=karaf_db
+databaseName=karaf_db;create=true
