--- a/karaf-system/system.workflow/pom.xml
+++ b/karaf-system/system.workflow/pom.xml
@@ -40,6 +40,7 @@
         <configuration>
           <exportScr>true</exportScr>
           <instructions>
+            <Import-Package>!javax.annotation, *</Import-Package>
             <!-- Enable processing of OSGI DS component annotations -->
             <_dsannotations>*</_dsannotations>
             <!-- Enable processing of OSGI metatype annotations -->
