--- a/karaf-system/system.core/pom.xml
+++ b/karaf-system/system.core/pom.xml
@@ -70,9 +70,10 @@
             <feature>pax-jdbc-spec</feature>
             <feature>pax-jdbc-config</feature>
             <feature>pax-jdbc-pool-dbcp2</feature>
-            <feature dependency="true">aries-blueprint</feature>
+            <feature >aries-blueprint</feature>
             <feature version="[2,3)">jpa</feature>
             <feature version="[3,4)">openjpa3</feature>
+            <feature>pax-jdbc-postgresql</feature>
             <feature>patlego-vm-jdbc</feature>
           </bootFeatures>
           <workDirectory>${project.build.directory}/assembly/patlego.vm</workDirectory>
