--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -181,6 +181,13 @@
         <artifactId>javax.persistence-api</artifactId>
         <version>2.2</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/biz.aQute.bnd/biz.aQute.bndlib -->
+      <dependency>
+        <groupId>biz.aQute.bnd</groupId>
+        <artifactId>biz.aQute.bndlib</artifactId>
+        <version>5.1.1</version>
+        <scope>provided</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 </project>
