--- a/karaf-system/system.dao/pom.xml
+++ b/karaf-system/system.dao/pom.xml
@@ -104,5 +104,9 @@
       <groupId>javax.persistence</groupId>
       <artifactId>javax.persistence-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>biz.aQute.bnd</groupId>
+      <artifactId>biz.aQute.bndlib</artifactId>
+    </dependency>
   </dependencies>
 </project>
