--- a/karaf-system/system.mocks/pom.xml
+++ b/karaf-system/system.mocks/pom.xml
@@ -91,5 +91,9 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
     </dependency>
+    <dependency>
+      <groupId>biz.aQute.bnd</groupId>
+      <artifactId>biz.aQute.bndlib</artifactId>
+    </dependency>
   </dependencies>
 </project>
