--- a/karaf-system/system.workflow/pom.xml
+++ b/karaf-system/system.workflow/pom.xml
@@ -91,5 +91,9 @@
       <groupId>com.google.code.findbugs</groupId>
       <artifactId>jsr305</artifactId>
     </dependency>
+    <dependency>
+      <groupId>biz.aQute.bnd</groupId>
+      <artifactId>biz.aQute.bndlib</artifactId>
+    </dependency>
   </dependencies>
 </project>
