--- a/karaf-system/system.core/pom.xml
+++ b/karaf-system/system.core/pom.xml
@@ -72,7 +72,7 @@
             <feature>pax-jdbc-pool-dbcp2</feature>
             <feature dependency="true">aries-blueprint</feature>
             <feature version="[2,3)">jpa</feature>
-            <feature version="[3,4)">openjpa3</feature>
+            <feature version="[5,6)">hibernate</feature>
             <feature>pax-jdbc-postgresql</feature>
             <feature>patlego-vm-jdbc-datasource</feature>
             <feature>patlego-vm-jdbc</feature>
