--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -6,10 +6,12 @@
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>Karaf System</name>
+
   <modules>
     <module>system.mocks</module>
     <module>system.dao</module>
     <module>system.workflow</module>
+    <module>system.client</module>
     <module>system.features</module>
     <module>system.core</module>
   </modules>
@@ -48,6 +50,11 @@
               <version>1.2.0</version>
             </dependency>
           </dependencies>
+        </plugin>
+        <plugin>
+          <groupId>com.github.eirslett</groupId>
+          <artifactId>frontend-maven-plugin</artifactId>
+          <version>1.10.0</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -162,8 +169,7 @@
         <artifactId>commons-dbutils</artifactId>
         <version>1.7</version>
         <scope>provided</scope>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/com.google.code.findbugs/jsr305 -->
+      </dependency> <!--https://mvnrepository.com/artifact/com.google.code.findbugs/jsr305-->
       <dependency>
         <groupId>com.google.code.findbugs</groupId>
         <artifactId>jsr305</artifactId>
@@ -186,15 +192,13 @@
         <artifactId>javax.persistence-api</artifactId>
         <version>2.2</version>
         <scope>provided</scope>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/org.apache.aries.jpa/org.apache.aries.jpa.api -->
+      </dependency> <!--https://mvnrepository.com/artifact/org.apache.aries.jpa/org.apache.aries.jpa.api-->
       <dependency>
         <groupId>org.apache.aries.jpa</groupId>
         <artifactId>org.apache.aries.jpa.api</artifactId>
         <version>2.7.2</version>
         <scope>provided</scope>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+      </dependency> <!--https://mvnrepository.com/artifact/org.apache.commons/commons-lang3-->
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
