Adding npm install

--- a/karaf-system/system.client/pom.xml
+++ b/karaf-system/system.client/pom.xml
@@ -70,6 +70,15 @@
             </configuration>
           </execution>
           <execution>
+            <id>npm install</id>
+            <goals>
+              <goal>npm</goal>
+            </goals>
+            <configuration>
+              <arguments>install</arguments>
+            </configuration>
+          </execution>
+          <execution>
             <id>npm build</id>
             <goals>
               <goal>npm</goal>
