--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -1,17 +1,17 @@
-<?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>patlego.vm.github.io</groupId>
   <artifactId>karaf-system</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>Karaf System</name>
-
   <modules>
     <module>system.mocks</module>
     <module>system.dao</module>
     <module>system.workflow</module>
     <module>system.client</module>
+    <module>system.ocr</module>
     <module>system.features</module>
     <module>system.core</module>
   </modules>
@@ -204,6 +204,12 @@
         <artifactId>commons-lang3</artifactId>
         <version>3.9</version>
         <scope>provided</scope>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+      <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.7</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
