--- a/karaf-system/system.core/pom.xml
+++ b/karaf-system/system.core/pom.xml
@@ -77,6 +77,8 @@
             <feature>patlego-vm-jdbc-datasource</feature>
             <feature>patlego-vm-jdbc</feature>
             <feature>patlego-vm-client</feature>
+            <feature>patlego-vm-ocr</feature>
+            <feature>patlego-vm-workflow</feature>
           </bootFeatures>
           <workDirectory>${project.build.directory}/assembly/patlego.vm</workDirectory>
           <pathPrefix>patlego.vm</pathPrefix>
