--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -211,6 +211,29 @@
         <artifactId>commons-io</artifactId>
         <version>2.7</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
+      <dependency>
+        <groupId>org.apache.pdfbox</groupId>
+        <artifactId>pdfbox</artifactId>
+        <version>2.0.20</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
+      <dependency>
+        <groupId>org.apache.pdfbox</groupId>
+        <artifactId>fontbox</artifactId>
+        <version>2.0.20</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.apache.tika/tika-core -->
+      <dependency>
+        <groupId>org.apache.tika</groupId>
+        <artifactId>tika-core</artifactId>
+        <version>1.24.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.pdfbox</groupId>
+        <artifactId>pdfbox-tools</artifactId>
+        <version>2.0.20</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 </project>
