--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -234,6 +234,12 @@
         <artifactId>pdfbox-tools</artifactId>
         <version>2.0.20</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/org.apache.tika/tika-parsers -->
+      <dependency>
+        <groupId>org.apache.tika</groupId>
+        <artifactId>tika-parsers</artifactId>
+        <version>1.24.1</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 </project>
