Adding final touches to the parser

--- a/karaf-system/system.core/src/main/resources/dev/docker/docker-compose.yml
+++ b/karaf-system/system.core/src/main/resources/dev/docker/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   karaf:
      environment:
        - TZ=America/Montreal
-     build: ./karaf 
+     build: .
      restart: always
      ports:
          - "5005:5005"
