--- a/karaf-system/system.core/src/main/resources/dev/docker/Dockerfile
+++ b/karaf-system/system.core/src/main/resources/dev/docker/Dockerfile
@@ -1,4 +1,5 @@
 FROM openjdk:11
+RUN mkdir -p /home/root/.m2/repository
 ENV KARAF_INSTALL_PATH /opt
 ENV KARAF_HOME $KARAF_INSTALL_PATH/patlego.vm
 ENV PATH $PATH:$KARAF_HOME/bin
