--- a/karaf-system/system.ocr/pom.xml
+++ b/karaf-system/system.ocr/pom.xml
@@ -113,5 +113,10 @@
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-parsers</artifactId>
     </dependency>
+    <dependency>
+      <groupId>patlego.vm.github.io</groupId>
+      <artifactId>system.dao</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 </project>
