Adding more changes

--- a/karaf-system/system.ocr/pom.xml
+++ b/karaf-system/system.ocr/pom.xml
@@ -41,6 +41,7 @@
           <exportScr>true</exportScr>
           <instructions>
             <Import-Package>!javax.annotation, *</Import-Package>
+            <Export-Package>patlego.vm.github.io.ocr.*</Export-Package>
             <!-- Enable processing of OSGI DS component annotations -->
             <_dsannotations>*</_dsannotations>
             <!-- Enable processing of OSGI metatype annotations -->
