--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -7,11 +7,11 @@
   <version>1.0-SNAPSHOT</version>
   <name>Karaf System</name>
   <modules>
-    <module>system.mocks</module>
     <module>system.dao</module>
     <module>system.workflow</module>
     <module>system.client</module>
     <module>system.ocr</module>
+    <module>system.mocks</module>
     <module>system.features</module>
     <module>system.core</module>
   </modules>
@@ -137,7 +137,14 @@
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-junit-jupiter</artifactId>
-        <version>2.25.1</version>
+        <version>3.4.4</version>
+        <scope>test</scope>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>3.4.4</version>
         <scope>test</scope>
       </dependency>
       <dependency>
