--- a/karaf-system/system.mocks/pom.xml
+++ b/karaf-system/system.mocks/pom.xml
@@ -64,11 +64,6 @@
       <artifactId>osgi.annotation</artifactId>
     </dependency>
     <dependency>
-      <groupId>patlego.vm.github.io</groupId>
-      <artifactId>system.workflow</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
@@ -90,6 +85,15 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>patlego.vm.github.io</groupId>
+      <artifactId>system.workflow</artifactId>
+      <version>${project.version}</version>
     </dependency>
   </dependencies>
 </project>
