--- a/karaf-system/system.mocks/pom.xml
+++ b/karaf-system/system.mocks/pom.xml
@@ -91,6 +91,28 @@
       <artifactId>mockito-core</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-inline</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>net.bytebuddy</groupId>
+      <artifactId>byte-buddy</artifactId>
+    </dependency>
+     <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+     <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api -->
+    <dependency>
+      <groupId>javax.persistence</groupId>
+      <artifactId>javax.persistence-api</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.aries.jpa</groupId>
+        <artifactId>org.apache.aries.jpa.api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>patlego.vm.github.io</groupId>
       <artifactId>system.workflow</artifactId>
       <version>${project.version}</version>
