--- a/karaf-system/system.workflow/pom.xml
+++ b/karaf-system/system.workflow/pom.xml
@@ -96,5 +96,10 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
     </dependency>
+    <dependency>
+      <groupId>patlego.vm.github.io</groupId>
+      <artifactId>system.dao</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 </project>
