--- a/karaf-system/system.core/src/main/resources/dev/docker/docker-compose.yml
+++ b/karaf-system/system.core/src/main/resources/dev/docker/docker-compose.yml
@@ -30,6 +30,8 @@ services:
       - POSTGRES_DB=karaf_db
       - POSTGRES_USER=karaf
       - POSTGRES_PASSWORD=karaf_pwd
+     volumes:
+       - ./sql/init-schema.sql:/docker-entrypoint-initdb.d/init-schema.sql
      networks: 
       - backend
 networks:
