--- a/karaf-system/system.profile/src/main/resources/system.profile/package.json
+++ b/karaf-system/system.profile/src/main/resources/system.profile/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "tailwindcss": "^1.6.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
