--- a/karaf-system/system.profile/src/main/resources/system.profile/package.json
+++ b/karaf-system/system.profile/src/main/resources/system.profile/package.json
@@ -15,6 +15,7 @@
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^2.3.0",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-plugin-router": "~4.4.0",
