--- a/karaf-system/system.profile/src/main/resources/system.profile/package.json
+++ b/karaf-system/system.profile/src/main/resources/system.profile/package.json
@@ -9,6 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/free-regular-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/vue-fontawesome": "^0.1.10",
     "core-js": "^3.6.5",
     "tailwindcss": "^1.6.2",
     "vue": "^2.6.11",
