--- a/karaf-system/system.profile/src/main/resources/system.profile/package.json
+++ b/karaf-system/system.profile/src/main/resources/system.profile/package.json
@@ -37,6 +37,8 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "jsdoc": "^3.6.5",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
