--- a/karaf-system/system.profile/src/main/resources/system.profile/package.json
+++ b/karaf-system/system.profile/src/main/resources/system.profile/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/vue-fontawesome": "^0.1.10",
     "core-js": "^3.6.5",
+    "postcss-import": "^12.0.1",
     "tailwindcss": "^1.6.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
