--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup Java 11
-      - uses: actions/setup-java@v1
+        uses: actions/setup-java@v1
         with:
           java-version: '11'
           architecture: x64
