Adding fix for wf

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -13,4 +13,4 @@ jobs:
           java-version: '11'
           architecture: x64
       - name: Run Maven
-        run: mvn clean install --file karaf-system/pom.xml
+        run: mvn clean install --file karaf-system/pom.xml -Pdev-build
