Adding vpn configurations

--- a/karaf-system/system.features/pom.xml
+++ b/karaf-system/system.features/pom.xml
@@ -87,5 +87,36 @@
         </plugins>
       </build>
     </profile>
+
+    <profile>
+      <id>prod-build</id>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-resources-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>copy-features</id>
+                <!-- here the phase you need -->
+                <phase>validate</phase>
+                <goals>
+                  <goal>copy-resources</goal>
+                </goals>
+                <configuration>
+                  <outputDirectory>${basedir}/src/main/resources</outputDirectory>
+                  <resources>
+                    <resource>
+                      <directory>src/main/resources/prod</directory>
+                      <filtering>true</filtering>
+                    </resource>
+                  </resources>
+                  <overwrite>true</overwrite>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
 </project>
