Reducing the amount of feature files to manage

--- a/karaf-system/system.features/pom.xml
+++ b/karaf-system/system.features/pom.xml
@@ -11,7 +11,21 @@
   <artifactId>system.features</artifactId>
   <packaging>pom</packaging>
   <name>System Features</name>
-  
+
+  <properties>
+    <postgres.db>karaf_db</postgres.db>
+
+    <!-- PSQL DEV VALUES -->
+    <postgres.dev.url>jdbc:postgresql://postgres-db:5432</postgres.dev.url>
+    <postgres.dev.username>karaf</postgres.dev.username>
+    <postgres.dev.password>karaf_pwd</postgres.dev.password>
+
+    <!-- PSQL ECS VALUES -->
+    <postgres.ecs.url>jdbc:postgresql://karaf-db.ch5m6ge8f6p2.ca-central-1.rds.amazonaws.com:5432</postgres.ecs.url>
+    <postgres.ecs.username>karaf</postgres.ecs.username>
+    <postgres.ecs.password>sXqANoEJT7zYKWGymypP</postgres.ecs.password>
+  </properties>
+
   <build>
     <resources>
       <resource>
@@ -75,7 +89,7 @@
                   <outputDirectory>${basedir}/src/main/resources</outputDirectory>
                   <resources>
                     <resource>
-                      <directory>src/main/resources/dev</directory>
+                      <directory>src/main/resources/template</directory>
                       <filtering>true</filtering>
                     </resource>
                   </resources>
@@ -83,6 +97,41 @@
                 </configuration>
               </execution>
             </executions>
+          </plugin>
+          <plugin>
+            <groupId>com.google.code.maven-replacer-plugin</groupId>
+            <artifactId>replacer</artifactId>
+            <executions>
+              <execution>
+                <phase>prepare-package</phase>
+                <goals>
+                  <goal>replace</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <includes>
+                <include>${basedir}/src/main/resources/features.xml</include>
+              </includes>
+              <replacements>
+                <replacement>
+                  <token>%postgres.password%</token>
+                  <value>${postgres.dev.password}</value>
+                </replacement>
+                <replacement>
+                  <token>%postgres.username%</token>
+                  <value>${postgres.dev.username}</value>
+                </replacement>
+                <replacement>
+                  <token>%postgres.url%</token>
+                  <value>${postgres.dev.url}</value>
+                </replacement>
+                <replacement>
+                  <token>%postgres.db%</token>
+                  <value>${postgres.db}</value>
+                </replacement>
+              </replacements>
+            </configuration>
           </plugin>
         </plugins>
       </build>
@@ -106,7 +155,7 @@
                   <outputDirectory>${basedir}/src/main/resources</outputDirectory>
                   <resources>
                     <resource>
-                      <directory>src/main/resources/prod</directory>
+                      <directory>src/main/resources/template</directory>
                       <filtering>true</filtering>
                     </resource>
                   </resources>
@@ -114,6 +163,41 @@
                 </configuration>
               </execution>
             </executions>
+          </plugin>
+          <plugin>
+            <groupId>com.google.code.maven-replacer-plugin</groupId>
+            <artifactId>replacer</artifactId>
+            <executions>
+              <execution>
+                <phase>prepare-package</phase>
+                <goals>
+                  <goal>replace</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <includes>
+                <include>${basedir}/src/main/resources/features.xml</include>
+              </includes>
+              <replacements>
+                <replacement>
+                  <token>%postgres.password%</token>
+                  <value>${postgres.ecs.password}</value>
+                </replacement>
+                <replacement>
+                  <token>%postgres.username%</token>
+                  <value>${postgres.ecs.username}</value>
+                </replacement>
+                <replacement>
+                  <token>%postgres.url%</token>
+                  <value>${postgres.ecs.url}</value>
+                </replacement>
+                <replacement>
+                  <token>%postgres.db%</token>
+                  <value>${postgres.db}</value>
+                </replacement>
+              </replacements>
+            </configuration>
           </plugin>
         </plugins>
       </build>
