--- a/karaf-system/pom.xml
+++ b/karaf-system/pom.xml
@@ -25,6 +25,11 @@
     <pluginManagement>
       <plugins>
         <plugin>
+          <groupId>com.google.code.maven-replacer-plugin</groupId>
+          <artifactId>replacer</artifactId>
+          <version>1.5.3</version>
+        </plugin>
+        <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
           <version>0.8.5</version>
