--- a/karaf-system/system.features/pom.xml
+++ b/karaf-system/system.features/pom.xml
@@ -21,7 +21,7 @@
     <postgres.dev.password>karaf_pwd</postgres.dev.password>
 
     <!-- PSQL ECS VALUES -->
-    <postgres.ecs.url>jdbc:postgresql://karaf-db.ch5m6ge8f6p2.ca-central-1.rds.amazonaws.com:5432</postgres.ecs.url>
+    <postgres.ecs.url>jdbc:postgresql://pat-lego-db.ch5m6ge8f6p2.ca-central-1.rds.amazonaws.com:5432</postgres.ecs.url>
     <postgres.ecs.username>karaf</postgres.ecs.username>
     <postgres.ecs.password>sXqANoEJT7zYKWGymypP</postgres.ecs.password>
   </properties>
@@ -103,7 +103,7 @@
             <artifactId>replacer</artifactId>
             <executions>
               <execution>
-                <phase>prepare-package</phase>
+                <phase>validate</phase>
                 <goals>
                   <goal>replace</goal>
                 </goals>
@@ -111,6 +111,7 @@
             </executions>
             <configuration>
               <includes>
+                <include>${project.build.directory}/features.xml</include>
                 <include>${basedir}/src/main/resources/features.xml</include>
               </includes>
               <replacements>
@@ -169,7 +170,7 @@
             <artifactId>replacer</artifactId>
             <executions>
               <execution>
-                <phase>prepare-package</phase>
+                <phase>validate</phase>
                 <goals>
                   <goal>replace</goal>
                 </goals>
