--- a/karaf-system/system.features/pom.xml
+++ b/karaf-system/system.features/pom.xml
@@ -23,7 +23,7 @@
     <!-- PSQL ECS VALUES -->
     <postgres.ecs.url>jdbc:postgresql://pat-lego-db.ch5m6ge8f6p2.ca-central-1.rds.amazonaws.com:5432</postgres.ecs.url>
     <postgres.ecs.username>karaf</postgres.ecs.username>
-    <postgres.ecs.password>sXqANoEJT7zYKWGymypP</postgres.ecs.password>
+    <postgres.ecs.password></postgres.ecs.password>
   </properties>
 
   <build>
